从蓝牙发的的数据能打印到串口

--- a/Projets/01/01_project1/01_project1.uvprojx
+++ b/Projets/01/01_project1/01_project1.uvprojx
@@ -854,6 +854,26 @@
               <FileType>5</FileType>
               <FilePath>.\Utils\Delay.h</FilePath>
             </File>
+            <File>
+              <FileName>UART2.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Utils\UART2.c</FilePath>
+            </File>
+            <File>
+              <FileName>UART2.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Utils\UART2.h</FilePath>
+            </File>
+            <File>
+              <FileName>UART3.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Utils\UART3.c</FilePath>
+            </File>
+            <File>
+              <FileName>UART3.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Utils\UART3.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
