--- a/Projets/01/01_project1/01_project1.uvprojx
+++ b/Projets/01/01_project1/01_project1.uvprojx
@@ -190,7 +190,7 @@
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
-            <useUlib>0</useUlib>
+            <useUlib>1</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
             <nSecure>0</nSecure>
@@ -873,6 +873,16 @@
               <FileName>UART3.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Utils\UART3.h</FilePath>
+            </File>
+            <File>
+              <FileName>Bluet_to_wifi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Utils\Bluet_to_wifi.c</FilePath>
+            </File>
+            <File>
+              <FileName>Bluet_to_wifi.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Utils\Bluet_to_wifi.h</FilePath>
             </File>
           </Files>
         </Group>
