TCP自动连接成功，但不能发送数据

--- a/Projets/01/01_project1/01_project1.uvprojx
+++ b/Projets/01/01_project1/01_project1.uvprojx
@@ -884,6 +884,16 @@
               <FileType>5</FileType>
               <FilePath>.\Utils\Bluet_to_wifi.h</FilePath>
             </File>
+            <File>
+              <FileName>ADC.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Utils\ADC.c</FilePath>
+            </File>
+            <File>
+              <FileName>ADC.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Utils\ADC.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
