Changes to be committed: 	modified:   .vscode/launch.json 	new file:   .vscode/settings.json 	modified:   .vscode/tasks.json 	deleted:    05_CPP/day19/06_setPoint.cc 	new file:   05_CPP/day19/06_setPoint.cpp

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,20 @@
 {
   "version": "0.2.0",
   "configurations": [
+    {
+      "type": "cmake",
+      "request": "launch",
+      "name": "CMake: 外部启动",
+      "cmakeDebugType": "external",
+      "pipeName": "<...>"
+    },
+    
     // ------ C 调试配置 ------
     {
       "name": "C Debug",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${fileDirname}/bin/${fileBasenameNoExtension}_c_debug.exe",
+      "program": "${fileDirname}/${fileBasenameNoExtension}_c_debug.exe",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
@@ -22,9 +30,11 @@
       "name": "C++ Debug",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${fileDirname}/bin/${fileBasenameNoExtension}_cpp_debug.exe",
+      "program": "${fileDirname}/${fileBasenameNoExtension}_cpp_debug.exe",
       "args": [],
       "preLaunchTask": "C++ Build (Debug)"
     }
+    
   ]
+  
 }
