--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/bin/${fileBasenameNoExtension}_c_debug.exe",
+                "${fileDirname}/${fileBasenameNoExtension}_c_debug.exe",
                 "-std=c11",
                 "-Wall",
                 "-Wextra"
@@ -26,7 +26,7 @@
             "args": [
                 "${file}",
                 "-o",
-                "${fileDirname}/bin/${fileBasenameNoExtension}_c_release.exe",
+                "${fileDirname}/${fileBasenameNoExtension}_c_release.exe",
                 "-std=c17",
                 "-O3",
                 "-Wall",
@@ -47,7 +47,7 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/bin/${fileBasenameNoExtension}_cpp_debug.exe",
+                "${fileDirname}/${fileBasenameNoExtension}_cpp_debug.exe",
                 "-std=c++17",
                 "-Wall",
                 "-Wextra",
@@ -64,7 +64,7 @@
             "args": [
                 "${file}",
                 "-o",
-                "${fileDirname}/bin/${fileBasenameNoExtension}_cpp_release.exe",
+                "${fileDirname}/${fileBasenameNoExtension}_cpp_release.exe",
                 "-std=c++20",
                 "-O3",
                 "-Wall",
@@ -83,7 +83,7 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/bin/${fileBasenameNoExtension}.exe",
+                "${fileDirname}/${fileBasenameNoExtension}.exe",
                 "-std=c++17",
                 "-Wall",
                 "-Wextra"
