--- a/Projets/02/SmartHomeMonitorServer_02/conf/server.conf
+++ b/Projets/02/SmartHomeMonitorServer_02/conf/server.conf
@@ -2,6 +2,6 @@ ip  0.0.0.0
 port    8100
 thread_num  4
 task_num    10
-video_path  ../data/
-log_file    ../log/server.log
+video_path  ./data/
+log_file    ./log/server.log
 
