--- a/Projets/02/SmartHomeMonitorServer_02/client/Makefile
+++ b/Projets/02/SmartHomeMonitorServer_02/client/Makefile
@@ -8,7 +8,7 @@ CXX:=g++
 
 CXXFLAGS:= -w -g  $(addprefix -I, $(INC_DIR)) $(LIBS) 
 
-EXE:=./server.exe
+EXE:=./client.exe
 
 $(EXE):$(OBJS)
 	$(CXX) -o $@ $^ $(CXXFLAGS)
